--- a/App.config
+++ b/App.config
@@ -1,13 +1,56 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <appSettings>
+    <add key="IronOcr.LicenseKey" value="IRONOCR.MRSOYM123.13978-A67D1E8801-BSH25AMXI7GABJ6-OITTDSQLKEOE-JOQITXIQN2J7-QCM4DU5TWXJ4-XBQCVQNDMG4A-SWMDBE-T4MEFXV4CWSEUA-DEPLOYMENT.TRIAL-HKHHTR.TRIAL.EXPIRES.02.APR.2022"/>
+  </appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.8.9.0" newVersion="1.8.9.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Words" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.2.0.0" newVersion="22.2.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Cells" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.2.0.0" newVersion="22.2.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.PDF" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.2.0.0" newVersion="22.2.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Email" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.1.0.0" newVersion="22.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Slides" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.2.0.0" newVersion="22.2.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Imaging" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.1.0.0" newVersion="22.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Note" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.1.0.0" newVersion="21.1.0.0" />
+        <publisherPolicy apply="no" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Aspose.Zip" publicKeyToken="716fcc553a201e56" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-22.1.0.0" newVersion="22.1.0.0" />
+        <publisherPolicy apply="no" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
