--- a/packages.config
+++ b/packages.config
@@ -3,7 +3,7 @@
   <package id="Aspose.PDF" version="22.2.0" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
   <package id="GrapeCity.Documents.Imaging" version="5.0.0.773" targetFramework="net472" />
-  <package id="GrapeCity.Documents.Pdf" version="5.0.0.773" targetFramework="net472" />
+  <package id="GroupDocs.Parser" version="22.2.0" targetFramework="net472" />
   <package id="IronOcr" version="2022.1.0" targetFramework="net472" />
   <package id="IronOcr.Languages.Russian" version="2020.11.2" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
